# open-virus

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  main.c  network.c  network.h
hello_module/: CMakeLists.txt
include/ov/client/: network.h
include/ov/module/: module.hpp
modules/: CMakeLists.txt  Module.hpp
modules/hello/: CMakeLists.txt  Hello.cpp  Hello.hpp
scripts/: clang.sh  gcc.sh  install-clang.sh  install-cmake.sh  install-gcc.sh
server/: CMakeLists.txt  main.cpp  shell.cpp  shell.hpp
